src/index.css
body {
  margin: 0;
  font-family: "Times New Roman", Times, serif;
  font-size: 1.2rem;
  background-color: #181A1B;
  color: #cccccc;
}

/* Links */
a {
  text-decoration: none;
  color: lightskyblue;
}

a:hover {
  color: lightgreen
}


/* Text */
.text-container {
  padding: 20vh 20vw;
}

.text-container > p {
  margin: 15px;
}

.publication-item > p {
  margin: 15px 15px -5px;
}


/* Photos */
.photo-container {
  padding-top: 8vh;
  padding-left: 15vw;
  padding-right: 15vw; 
}

.photo-item {
  margin-bottom: 14vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.horizontal > img {
  width: 100%;
}

.vertical > img {
  width: 50%;
}

.photo-title {
  font-size: 1rem;
  margin: 2px;
  font-style: italic;
  align-self: flex-start;
}

.vertical > .photo-title {
  /* line up title with the start of vertical photos */
  margin-left: 25.5%;
}

